--- a/less/layout/items.less
+++ b/less/layout/items.less
@@ -180,6 +180,7 @@
     -ms-flex-direction: column;
     flex-direction: column;
     &--sale {
+      width: 50%;
       -webkit-box-orient: horizontal;
       -webkit-box-direction: normal;
       -ms-flex-direction: row;
